tests/algorithms/x/PHP/sorts/patience_sort.out
Fatal error: Uncaught Error: patience_sort(): Argument #1 ($collection) could not be passed by reference in /workspace/mochi/tests/algorithms/x/PHP/sorts/patience_sort.php:159
Stack trace:
#0 {main}
  thrown in /workspace/mochi/tests/algorithms/x/PHP/sorts/patience_sort.php on line 159